--- a/css/login_register_form.css
+++ b/css/login_register_form.css
@@ -55,7 +55,7 @@ h3 {
     background-color: lightgray;
 }
 
-#button {
+button {
     background-color: #183661;
     width: 200px;
     height: 35px;
@@ -68,7 +68,7 @@ a {
     color: #183661;
 }
 
-#button:hover {
+button:hover {
     background-color: #465e81;
 }
 
@@ -78,13 +78,17 @@ a:hover {
 
 #error-msg {
     color: crimson;
-    margin: auto;
+    margin-bottom: 20px;
+    word-wrap: break-word;
+    display: flex;
+    width: 250px !important;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #error-a {
     color: crimson;
-}
-
-span ul {
-    list-style: none;
 }
