--- a/css/addProduct.css
+++ b/css/addProduct.css
@@ -9,37 +9,50 @@
     box-shadow: inset;
     margin: 0;
     padding: 0;
-}
 
-#form-container {
-    margin: auto;
-    background-color: white;
-    border-style: none;
-    width: 700px;
+
 }
 
 body {
-    background-color: #eee !important;
+    background-color: #eee;
     top: 100%;
 }
 
-
-#left {
+h3 {
+    text-align: center;
     margin: auto;
+}
+
+#all {
+    position: absolute;
+    border-radius: 10px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
-    align-items: center;
+    text-align: center;
+    padding: 20px;
+    width: 1000px;
+}
+
+#form-container {
+    display: flex;
     justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
+#left {
+    width: 50%;
+    display: inline;
+    float: left;
+}
+
 #right {
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+    width: 50%;
+    display: inline;
+    float: right;
 }
 
 #textarea {
@@ -50,20 +63,6 @@ body {
 select {
     border: none;
     background-color: #eee;
-}
-
-h3 {
-    margin-top: 20px;
-    margin-bottom: 25px;
-}
-
-#form-container {
-    position: absolute;
-    border-radius: 10px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 20px;
 }
 
 .input-form {
@@ -81,15 +80,9 @@ h3 {
 }
 
 button {
-    display: flex;
-    margin: auto;
-    align-items: center;
-    justify-content: center;
     background-color: #183661;
     width: 200px;
     height: 35px;
-    margin-top: 50px;
-    margin-bottom: 50px;
     color: white;
 }
 
