--- a/css/login_register_form.css
+++ b/css/login_register_form.css
@@ -92,3 +92,12 @@ a:hover {
 #error-a {
     color: crimson;
 }
+
+#buttonCC {
+    background-color: #183661;
+    width: 200px;
+    height: 35px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    color: white;
+}
