--- a/css/expandProduct.css
+++ b/css/expandProduct.css
@@ -45,6 +45,10 @@ h5 {
 #textarea {
     min-height: 300px;
     min-width: 300px;
+    word-wrap: break-word;
+    word-break: break-all;
+    height: 80px;
+    resize: none;
 }
 
 select {
